--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1 align="center">Caracteristicas de los personajes de StarWars</h1>
-    <h3><li>Alanis Morales Jennifer</li></h3>
-    <h3><li>Luna López Flor de María</li></h3>
+    <h3><li>Mauricio Garcia Fuentes</li></h3>
     <ul id="authors">
     </ul>
 
